[gd_scene load_steps=47 format=3 uid="uid://5oyo75w8bmvq"]

[ext_resource type="Script" path="res://player_character.gd" id="1_yaems"]
[ext_resource type="Script" path="res://Scripts/States/StateMachine.gd" id="2_5kq1y"]
[ext_resource type="PackedScene" uid="uid://c2f6gkn1nj3vd" path="res://Art/Player/Character/import/kora_toon_exporting_to_godot.glb" id="2_b67p7"]
[ext_resource type="Script" path="res://player_camera_pivot.gd" id="2_x5q6m"]
[ext_resource type="Script" path="res://Scripts/States/LeaningCrate.gd" id="3_ac5b3"]
[ext_resource type="Script" path="res://Scripts/States/EnemyWander.gd" id="3_muoj0"]
[ext_resource type="Script" path="res://Scripts/States/Locomote.gd" id="5_cjkk6"]
[ext_resource type="Script" path="res://Scripts/States/PushingCrate.gd" id="7_3ij3v"]
[ext_resource type="Script" path="res://Scripts/States/Crouching.gd" id="9_3hh00"]
[ext_resource type="Script" path="res://Scripts/States/Crawling.gd" id="10_arvhh"]
[ext_resource type="Script" path="res://Scripts/States/Climbing.gd" id="10_d055u"]
[ext_resource type="Script" path="res://Scripts/States/Jumping.gd" id="10_o8yme"]

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_alo0e"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_2pcjx"]
animation = &"carrying_object"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_bgsfj"]
animation = &"display_loot"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_h74vc"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_v1q2y"]
animation = &"walk"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_lru6d"]
animation = &"run"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_srys3"]
blend_point_0/node = SubResource("AnimationNodeAnimation_h74vc")
blend_point_0/pos = 0.0
blend_point_1/node = SubResource("AnimationNodeAnimation_v1q2y")
blend_point_1/pos = 0.3
blend_point_2/node = SubResource("AnimationNodeAnimation_lru6d")
blend_point_2/pos = 1.0
min_space = 0.0

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_sma0w"]
resource_local_to_scene = true
animation = &"slash"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_05rc6"]
animation = &"crawl_idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_y4mt0"]
animation = &"crawl"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_ebfcu"]
blend_point_0/node = SubResource("AnimationNodeAnimation_05rc6")
blend_point_0/pos = 0.1
blend_point_1/node = SubResource("AnimationNodeAnimation_y4mt0")
blend_point_1/pos = 0.5

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_qhlp2"]
animation = &"crouch"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4hbm8"]
animation = &"leaning_pushable"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_g4gtf"]
animation = &"pushing_pushable"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_gy7fs"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_wbke6"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_eh4ht"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_2l6ic"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_k38qc"]
xfade_time = 0.1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_831vp"]
xfade_time = 0.1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_epm4v"]
xfade_time = 0.1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_3diy6"]
xfade_time = 0.1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_uup32"]
xfade_time = 0.1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_nw37k"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_e511p"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_sl7d2"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_nedae"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_o2c6g"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_nc2a0"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_u5chv"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_a8wfh"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_61bxm"]
states/Climbing/node = SubResource("AnimationNodeAnimation_2pcjx")
states/Climbing/position = Vector2(264, 181)
states/Jumping/node = SubResource("AnimationNodeAnimation_bgsfj")
states/Jumping/position = Vector2(505, 178)
states/Locomote/node = SubResource("AnimationNodeBlendSpace1D_srys3")
states/Locomote/position = Vector2(400, 100)
states/Slash/node = SubResource("AnimationNodeAnimation_sma0w")
states/Slash/position = Vector2(288, -23)
states/crawling/node = SubResource("AnimationNodeBlendSpace1D_ebfcu")
states/crawling/position = Vector2(347, -174)
states/crouch/node = SubResource("AnimationNodeAnimation_qhlp2")
states/crouch/position = Vector2(406, -70)
states/leaning_pushable/node = SubResource("AnimationNodeAnimation_4hbm8")
states/leaning_pushable/position = Vector2(656, -70)
states/pushing_pushable/node = SubResource("AnimationNodeAnimation_g4gtf")
states/pushing_pushable/position = Vector2(672, 39)
transitions = ["Start", "Locomote", SubResource("AnimationNodeStateMachineTransition_gy7fs"), "Locomote", "End", SubResource("AnimationNodeStateMachineTransition_wbke6"), "Slash", "Locomote", SubResource("AnimationNodeStateMachineTransition_eh4ht"), "Locomote", "Slash", SubResource("AnimationNodeStateMachineTransition_2l6ic"), "Locomote", "leaning_pushable", SubResource("AnimationNodeStateMachineTransition_k38qc"), "leaning_pushable", "pushing_pushable", SubResource("AnimationNodeStateMachineTransition_831vp"), "pushing_pushable", "leaning_pushable", SubResource("AnimationNodeStateMachineTransition_epm4v"), "pushing_pushable", "Locomote", SubResource("AnimationNodeStateMachineTransition_3diy6"), "leaning_pushable", "Locomote", SubResource("AnimationNodeStateMachineTransition_uup32"), "Locomote", "crouch", SubResource("AnimationNodeStateMachineTransition_nw37k"), "crouch", "Locomote", SubResource("AnimationNodeStateMachineTransition_e511p"), "crouch", "crawling", SubResource("AnimationNodeStateMachineTransition_sl7d2"), "crawling", "crouch", SubResource("AnimationNodeStateMachineTransition_nedae"), "Locomote", "Jumping", SubResource("AnimationNodeStateMachineTransition_o2c6g"), "Jumping", "Locomote", SubResource("AnimationNodeStateMachineTransition_nc2a0"), "Climbing", "Locomote", SubResource("AnimationNodeStateMachineTransition_u5chv"), "Locomote", "Climbing", SubResource("AnimationNodeStateMachineTransition_a8wfh")]
graph_offset = Vector2(-127, 34)

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_d3hs1"]
graph_offset = Vector2(-259, 68)
nodes/AnimSpeed/node = SubResource("AnimationNodeTimeScale_alo0e")
nodes/AnimSpeed/position = Vector2(60, 100)
nodes/StateMachine/node = SubResource("AnimationNodeStateMachine_61bxm")
nodes/StateMachine/position = Vector2(-120, 100)
nodes/output/position = Vector2(220, 100)
node_connections = [&"output", 0, &"AnimSpeed", &"AnimSpeed", 0, &"StateMachine"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_htfwu"]
radius = 0.15
height = 0.8

[node name="Node3D" type="Node3D"]

[node name="PlayerCharacter" type="CharacterBody3D" parent="."]
collision_layer = 2
collision_mask = 29
script = ExtResource("1_yaems")

[node name="SkinnedMesh" parent="PlayerCharacter" instance=ExtResource("2_b67p7")]
transform = Transform3D(-1, 0, -6.28631e-06, 0, 1, 0, 6.28631e-06, 0, -1, 0, 0, 0)

[node name="Skeleton3D" parent="PlayerCharacter/SkinnedMesh/rig" index="0"]
bones/1/position = Vector3(9.33853e-05, -0.0015814, -0.00883558)
bones/1/rotation = Quaternion(0.0211547, 0.0305014, -0.000645688, 0.999311)
bones/3/rotation = Quaternion(0.700905, 8.43486e-08, 8.70634e-08, 0.713255)
bones/4/rotation = Quaternion(-0.702987, 0.0343202, -0.011854, 0.710275)
bones/5/rotation = Quaternion(0.665899, 9.14319e-08, 7.93813e-08, 0.746042)
bones/8/rotation = Quaternion(-0.474235, -0.533289, -0.449223, 0.537497)
bones/10/rotation = Quaternion(0.547046, -0.647959, 0.174695, -0.500371)
bones/10/scale = Vector3(1.00628, 0.98756, 1.00628)
bones/11/rotation = Quaternion(-7.4509e-08, 0.0373711, 8.6206e-08, 0.999301)
bones/12/rotation = Quaternion(0.622061, 0.0384911, -0.0307338, 0.781418)
bones/12/scale = Vector3(1.00307, 0.974839, 1.02272)
bones/13/rotation = Quaternion(-2.73014e-08, 0.0370275, -2.12495e-08, 0.999314)
bones/14/rotation = Quaternion(-0.258633, 0.0368673, -0.0365958, 0.964578)
bones/14/scale = Vector3(0.990442, 1.01298, 0.997033)
bones/15/rotation = Quaternion(-0.544978, 0.514954, 0.590335, 0.298874)
bones/16/rotation = Quaternion(0.519983, 0.626763, -0.256726, -0.52046)
bones/16/scale = Vector3(1.00404, 0.991965, 1.00404)
bones/17/rotation = Quaternion(9.63559e-09, -0.0302112, 1.61345e-08, 0.999544)
bones/18/rotation = Quaternion(0.3654, -0.0301284, 0.0118038, 0.930288)
bones/18/scale = Vector3(1.00185, 0.99077, 1.00752)
bones/19/rotation = Quaternion(-1.292e-07, -0.0246415, -1.43141e-07, 0.999696)
bones/20/rotation = Quaternion(0.0226412, -0.0246891, 0.112939, 0.993037)
bones/20/scale = Vector3(0.995019, 1.01092, 0.994181)
bones/26/rotation = Quaternion(-5.44242e-09, -0.0319618, 0.00135382, 0.999488)
bones/27/rotation = Quaternion(0.714026, 8.60783e-08, 9.05334e-08, 0.700119)
bones/28/rotation = Quaternion(-0.713661, -0.0214105, 0.0237693, 0.699761)
bones/29/rotation = Quaternion(0.781919, 7.98056e-08, 9.59998e-08, 0.62338)
bones/34/rotation = Quaternion(0.980986, -0.0279005, -0.0878905, 0.17077)
bones/34/scale = Vector3(1.00252, 0.994976, 1.00252)
bones/35/rotation = Quaternion(1.27461e-08, -0.00168165, 1.33755e-08, 0.999999)
bones/36/rotation = Quaternion(0.266479, -0.00268903, 0.00074078, 0.963837)
bones/36/scale = Vector3(1.0036, 0.990772, 1.00572)
bones/37/rotation = Quaternion(-6.14153e-08, 0.0497483, -9.07773e-10, 0.998762)
bones/38/rotation = Quaternion(0.749386, -0.0500945, -0.0113515, -0.660138)
bones/38/scale = Vector3(0.993826, 0.994121, 1.01218)
bones/39/rotation = Quaternion(-0.00282727, 0.954981, -0.296652, -0.000915457)
bones/42/rotation = Quaternion(0.969707, -0.0781219, 0.099429, 0.208995)
bones/42/scale = Vector3(1.00422, 0.991619, 1.00422)
bones/43/rotation = Quaternion(6.194e-09, -0.00351496, 4.8541e-09, 0.999994)
bones/44/rotation = Quaternion(0.377318, -0.00358004, 0.00145528, 0.926076)
bones/44/scale = Vector3(1.00589, 0.982291, 1.01215)
bones/45/rotation = Quaternion(-3.94779e-08, 0.0240178, 2.26988e-08, 0.999712)
bones/46/rotation = Quaternion(0.798122, -0.0241799, 0.0611433, -0.598897)
bones/46/scale = Vector3(0.990433, 0.992431, 1.01751)
bones/49/position = Vector3(0.0103922, 0.0505599, 0.232788)
bones/49/rotation = Quaternion(0.794492, -0.0203075, 0.0266088, 0.606352)
bones/50/rotation = Quaternion(-0.102211, -0.00326718, -0.0317614, 0.99425)
bones/51/rotation = Quaternion(-0.0184802, -0.00297326, -0.0320044, 0.999312)
bones/52/rotation = Quaternion(-0.0479487, 1.2049e-07, -5.84987e-09, 0.99885)
bones/53/rotation = Quaternion(0.432839, -0.00409875, 0.0360778, 0.90074)
bones/55/rotation = Quaternion(-0.334486, -0.00535242, 0.0329367, 0.94181)
bones/56/rotation = Quaternion(-0.633082, 7.61793e-09, -8.04209e-05, 0.774085)
bones/57/rotation = Quaternion(-0.290626, 3.75621e-10, -0.00181266, 0.956835)

[node name="AnimationTree" type="AnimationTree" parent="PlayerCharacter/SkinnedMesh"]
tree_root = SubResource("AnimationNodeBlendTree_d3hs1")
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/AnimSpeed/scale = 1.0
parameters/StateMachine/Locomote/blend_position = -0.0275049
parameters/StateMachine/crawling/blend_position = 0.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerCharacter"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.42, 0)
shape = SubResource("CapsuleShape3D_htfwu")

[node name="StateMachine" type="Node" parent="PlayerCharacter"]
script = ExtResource("2_5kq1y")

[node name="EnemyWander" type="Node" parent="PlayerCharacter/StateMachine" node_paths=PackedStringArray("enemy")]
script = ExtResource("3_muoj0")
enemy = NodePath("../..")

[node name="Locomote" type="Node" parent="PlayerCharacter/StateMachine"]
script = ExtResource("5_cjkk6")

[node name="LeaningCrate" type="Node" parent="PlayerCharacter/StateMachine"]
script = ExtResource("3_ac5b3")

[node name="PushingCrate" type="Node" parent="PlayerCharacter/StateMachine"]
script = ExtResource("7_3ij3v")

[node name="Crouching" type="Node" parent="PlayerCharacter/StateMachine"]
script = ExtResource("9_3hh00")

[node name="Jumping" type="Node" parent="PlayerCharacter/StateMachine"]
script = ExtResource("10_o8yme")

[node name="Climbing" type="Node" parent="PlayerCharacter/StateMachine"]
script = ExtResource("10_d055u")

[node name="Crawling" type="Node" parent="PlayerCharacter/StateMachine"]
script = ExtResource("10_arvhh")

[node name="WallGrabRayCast3D" type="RayCast3D" parent="PlayerCharacter"]
transform = Transform3D(1, 0, 0, 0, -3.14315e-06, -1, 0, 1, -3.14315e-06, 0, 0.425, -0.1)
collision_mask = 16
hit_from_inside = true
collide_with_areas = true

[node name="PlayerCameraPivot" type="Node3D" parent="."]
script = ExtResource("2_x5q6m")

[node name="Camera3D" type="Camera3D" parent="PlayerCameraPivot"]
transform = Transform3D(1, 0, 0, 0, 0.563598, 0.826049, 0, -0.826049, 0.563598, -1.43051e-06, 5.88228, 3.62347)

[editable path="PlayerCharacter/SkinnedMesh"]
